# Compiler-Project

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
exe/: CMakeLists.txt
src/: CMakeLists.txt  expression_evaluator.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  syntax_nodes.h  tokens.h
test/: CMakeLists.txt
test/lexer/: run_lexer_tests.sh  src1.exp  src1.txt  src2.exp  src2.txt  src3.exp  src3.txt  src4.exp  src5.exp  src5.txt  src6.exp  src6.txt  src7.exp  src7.txt  test_lexer.cpp
